<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/recept_layout"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/recepts"
            android:layout_weight="0.2"
            android:background="@drawable/recepts1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/recepts"/>
        </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@drawable/gray_line"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/restorans_layout">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/restorans"
            android:layout_weight="0.2"
            android:background="@drawable/restorans"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/restorans"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@drawable/gray_line"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/coockers_layout"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/coockers"
            android:layout_weight="0.2"
            android:background="@drawable/coockers"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/avtors"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@drawable/gray_line"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/search_layout"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/search"
            android:layout_weight="0.2"
            android:background="@drawable/search"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/search"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@drawable/gray_line"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/favorites_layout"
        android:orientation="horizontal">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/favorites"
        android:layout_weight="0.2"
        android:background="@drawable/favorites"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:textColor="#ffffff"
        android:text="@string/favorite"/>
</LinearLayout>

</LinearLayout>